--- a/index.html
+++ b/index.html
@@ -1633,15 +1633,14 @@
             console.log('Game Won!');
         }
 
-        function startNewGame() {
-
-            // Add this to your startNewGame() function:
-            async function startNewGame() {
-                // Enable audio context on iOS
-                if (Tone.context.state !== 'running') {
-                    await Tone.start();
-                    console.log('Audio context started for iOS');
-                }
+        async function startNewGame() {
+            // Enable audio context on iOS
+            if (Tone.context.state !== 'running') {
+                await Tone.start();
+                // Trigger a silent note to preload samples
+                piano.triggerAttackRelease("C4", "1n", "+0", 0);
+                console.log('Audio context started for iOS');
+            }
             // Add this at the beginning of startNewGame()
             if (Tone.context.state !== 'running') {
                 Tone.start().then(() => {
