--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
         <div class="header">
             <div class="score-display">
                 Score: <span id="score">0</span> | 
-                <span class="lives">Misses: <span id="lives">0</span>/3</span>
+                <span class="lives">Miss: <span id="lives">0</span>/3</span>
             </div>
             <button id="endGameBtn" class="end-game-btn" onclick="endGame()" style="display: none;">End Game</button>
             <div class="difficulty-display" id="difficulty">Beginner</div>
