--- a/index.html
+++ b/index.html
@@ -503,7 +503,7 @@
             margin-top: 15px;
             padding: 12px 24px;
             font-size: 20px;
-            background: #4CAF50;
+            background: #f4f1e8;
             color: white;
             border: none;
             border-radius: 6px;
