--- a/index.html
+++ b/index.html
@@ -503,15 +503,15 @@
             margin-top: 15px;
             padding: 12px 24px;
             font-size: 20px;
-            background: #f4f1e8;
-            color: white;
+            background: #e6dfca
+            color: black;
             border: none;
             border-radius: 6px;
             cursor: pointer;
         }
 
         .start-game-btn:hover {
-            background: #45a049;
+            background: #e6dfca
         }
 
         /* Game Over */
