--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
 
     <title>Test app name replace</title>
     <link rel="icon" type="image/png" sizes="16x16" href="im4.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="im4.png">
+    <link rel="icon" sizes="192x192" href="im4.png">
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-title" content="NoteNow">
 
     <!-- Add Tone.js library -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tone/14.8.49/Tone.js"></script>
@@ -27,7 +31,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('im6.png');
+            background-image: url('im7.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
