--- a/index.html
+++ b/index.html
@@ -31,20 +31,25 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background-image: url('im7.png');
-            background-size: cover;
-            background-position: center;
-            background-repeat: no-repeat;
+            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
             z-index: 1000;
             display: flex;
             align-items: center;
             justify-content: center;
+            flex-direction: column;
         }
 
         .welcome-content {
             text-align: center;
             color: white;
-            text-shadow: 2px 2px 4px rgba(0,0,0,0.8);
+        }
+
+        .welcome-logo {
+            width: 80px;
+            height: 80px;
+            margin-bottom: 20px;
+            border-radius: 12px;
+            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
         }
 
 
@@ -644,7 +649,8 @@
 <body>
     <div class="welcome-screen" id="welcomeScreen">
         <div class="welcome-content">
-            <!-- Content will go here later -->
+            <img src="im8.png" alt="NoteNow Logo" class="welcome-logo">
+            <h1 style="margin: 0; font-size: 28px; font-weight: bold;"></h1>
         </div>
     </div>
     
