--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
 
 
     <title>Test app name replace</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="im4.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="im4.png">
-    <link rel="icon" sizes="192x192" href="im4.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo.png">
+    <link rel="icon" sizes="192x192" href="logo.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="NoteNow">
 
@@ -31,7 +31,7 @@
             left: 0;
             width: 100%;
             height: 100%;
-            background: linear-gradient(135deg, #667eea 0%, #764ba2 100%);
+            background: linear-gradient(135deg, #f4f1e8 0%, #fbf6ee 100%);
             z-index: 1000;
             display: flex;
             align-items: center;
@@ -45,18 +45,22 @@
         }
 
         .welcome-logo {
-            width: 80px;
-            height: 80px;
+            width: 140px;
+            height: 140px;
             margin-bottom: 20px;
-            border-radius: 12px;
-            box-shadow: 0 4px 12px rgba(0,0,0,0.3);
+            
         }
 
 
         .game-container {
-            max-width: 400px;
+            max-width: 95vw;
+            width: 100%;
             margin: 0 auto;
             text-align: center;
+            display: flex;
+            flex-direction: column;
+            padding: 0 10px;
+            box-sizing: border-box;
         }
 
         /* Score and Settings */
@@ -77,28 +81,29 @@
 
 
         .lives {
-            color: red;
+            color: rgba(97, 31, 31, 0.982);
         }
 
         /* Scale Selection */
         .scale-selector {
             margin-bottom: 15px;
             display: flex;
-            gap: 10px;
+            gap: 8px;
             justify-content: center;
             align-items: center;
             flex-wrap: wrap;
+            padding: 0 10px;
         }
 
         select {
-            padding: 2px;
-            font-size: 18px;
+            padding: 6px;
+            font-size: 16px;
             border-radius: 4px;
             border: 1px solid #ccc;
-            width: 120px; /* Fixed width for all dropdowns */
+            min-width: 90px;
+            max-width: 120px;
+            width: auto;
             box-sizing: border-box;
-            color: black;
-            background: #f9f7f3;
         }
 
         select:disabled {
@@ -113,7 +118,7 @@
             left: 0;
             padding: 4px 8px;
             font-size: 12px;
-            background: #ff4444;
+            background: #853f33;
             color: white;
             border: none;
             border-radius: 4px;
@@ -121,7 +126,7 @@
         }
 
         .end-game-btn:hover {
-            background: #cc3333;
+            background: #a14747;
         }
 
 
@@ -133,6 +138,8 @@
             margin-bottom: 15px;
             position: relative;
             overflow: hidden;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         /* Staff Lines System - 25 evenly spaced lines */
@@ -329,9 +336,11 @@
             display: flex;
             justify-content: center;
             background: #333;
-            padding: 4px;
+            padding: 8px 8px 8px 15px;
             border-radius: 8px;
             position: relative;
+            width: 100%;
+            box-sizing: border-box;
         }
 
         .key {
@@ -541,7 +550,7 @@
             padding: 12px 24px;
             font-size: 20px;
             background: #f4f2ec;
-            color: rgb(69, 66, 61);
+            color: #39201a;
             border: 2px solid #010101da;
             border-radius: 6px;
             cursor: pointer;
@@ -649,7 +658,7 @@
 <body>
     <div class="welcome-screen" id="welcomeScreen">
         <div class="welcome-content">
-            <img src="im8.png" alt="NoteNow Logo" class="welcome-logo">
+            <img src="logo.png" alt="NoteNow Logo" class="welcome-logo">
             <h1 style="margin: 0; font-size: 28px; font-weight: bold;"></h1>
         </div>
     </div>
