--- a/index.html
+++ b/index.html
@@ -98,6 +98,7 @@
         select {
             padding: 6px;
             font-size: 16px;
+            color: #333; /* ADD THIS LINE - forces dark text */
             border-radius: 4px;
             border: 1px solid #ccc;
             min-width: 90px;
