--- a/index.html
+++ b/index.html
@@ -99,6 +99,7 @@
             padding: 6px;
             font-size: 16px;
             color: #333; /* ADD THIS LINE - forces dark text */
+            background-color: #fff;
             border-radius: 4px;
             border: 1px solid #ccc;
             min-width: 90px;
