--- a/index.html
+++ b/index.html
@@ -603,7 +603,7 @@
             margin-top: 15px;
             padding: 12px 24px;
             font-size: 20px;
-            background: #8e6d58;
+            background: #bba598;
             color: white;
             border: 1px solid #333;
             border-radius: 6px;;
