--- a/index.html
+++ b/index.html
@@ -604,7 +604,7 @@
             padding: 12px 24px;
             font-size: 20px;
             background: #bba598;
-            color: white;
+            color: #333;
             border: 1px solid #333;
             border-radius: 6px;;
             cursor: pointer;
