--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 
     <title>Test app name replace</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="logo.png">
-    <link rel="icon" sizes="192x192" href="logo.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo7.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo7.png">
+    <link rel="icon" sizes="192x192" href="logo7.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="NoteNow">
 
@@ -512,6 +512,7 @@
             display: none;
         }
 
+                
         .sound-toggle {
             position: absolute;
             right: 8px;
@@ -530,7 +531,7 @@
             font-size: 12px;
             user-select: none;
             z-index: 10;
-            opacity: 1;
+            opacity: 0.5;
         }
 
         .sound-toggle:hover {
@@ -777,7 +778,7 @@
 <body>
     <div class="welcome-screen" id="welcomeScreen">
         <div class="welcome-content">
-            <img src="logo.png" alt="NoteNow Logo" class="welcome-logo">
+            <img src="logo5.png" alt="NoteNow Logo" class="welcome-logo">
             <h1 style="margin: 0; font-size: 28px; font-weight: bold;"></h1>
         </div>
     </div>
@@ -1375,7 +1376,7 @@
                 window.soundEnabled = !window.soundEnabled;
                 if (window.soundEnabled) {
                     soundToggle.innerHTML = '♪';
-                    soundToggle.style.opacity = '1';
+                    soundToggle.style.opacity = '0.5';
                 } else {
                     soundToggle.innerHTML = '🔇';
                     soundToggle.style.opacity = '0.5';
