--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 
 
     <title>Test app name replace</title>
-    <link rel="icon" type="image/png" sizes="16x16" href="logo7.png">
-    <link rel="apple-touch-icon" sizes="180x180" href="logo7.png">
-    <link rel="icon" sizes="192x192" href="logo7.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="logo.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="logo.png">
+    <link rel="icon" sizes="192x192" href="logo.png">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-title" content="NoteNow">
 
@@ -778,7 +778,7 @@
 <body>
     <div class="welcome-screen" id="welcomeScreen">
         <div class="welcome-content">
-            <img src="logo5.png" alt="NoteNow Logo" class="welcome-logo">
+            <img src="logo.png" alt="NoteNow Logo" class="welcome-logo">
             <h1 style="margin: 0; font-size: 28px; font-weight: bold;"></h1>
         </div>
     </div>
