--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
 
         .progress-bar {
             height: 100%;
-            background: linear-gradient(90deg, #4e6386; 0%, #45a049 100%);
+            background: linear-gradient(90deg, #45a049 0%, #45a049 100%);
             width: 0%;
             transition: width 0.3s ease;
             border-radius: 3px;
